# cv-nlp-project

./: .gitignore  readme.md
testing_projects/Yolo-taco_test_v1/: .gitignore  README.md  pyproject.toml  requirements.txt  temp.md
testing_projects/Yolo-taco_test_v1/assets/: taco_category_summary.json  taco_download_failures.json
testing_projects/Yolo-taco_test_v1/configs/label_maps/: bottle_focus.json
testing_projects/Yolo-taco_test_v1/data/prepared/taco_all_classes/: dataset.yaml  metadata.json
testing_projects/Yolo-taco_test_v1/data/prepared/taco_bottle_focus/: dataset.yaml  metadata.json
testing_projects/Yolo-taco_test_v1/random_stuff/: long_training_run_log_v1.txt
testing_projects/Yolo-taco_test_v1/runs/eval/: yolo11s_taco_all_classes_summary.json
testing_projects/Yolo-taco_test_v1/runs/eval/yolo11s_taco_all_classes_test/: predictions.json
testing_projects/Yolo-taco_test_v1/runs/eval/yolo11s_taco_all_classes_val/: predictions.json
testing_projects/Yolo-taco_test_v1/runs/train/latest/: args.yaml  results.csv  run_summary.json
testing_projects/Yolo-taco_test_v1/runs/train/yolo11s_taco_all_classes/: args.yaml  results.csv  run_summary.json
testing_projects/Yolo-taco_test_v1/runs/train/yolov8n_taco_bottle_focus/: args.yaml
testing_projects/Yolo-taco_test_v1/scripts/: analyze_taco_labels.py  download_assets.py  evaluate.py  full_pipeline.py  predict.py  prepare_taco.py  taco_image_distribution.py  train.py
testing_projects/Yolo-taco_test_v1/src/trash_detector/: __init__.py
testing_projects/Yolo-taco_test_v1/src/trash_detector/data/: label_maps.py  (+1 more)
(+461 files in other folders)
